# semver

./: Cargo.toml  LICENSE
benches/: parse.rs
src/: error.rs  lib.rs  package.rs  range.rs  spec.rs  version.rs
src/package/: jsr.rs  npm.rs
src/range/: comparator.rs  jsr.rs  kind.rs  npm.rs
src/spec/: alias.rs  file.rs  git.rs  jsr.rs  kind.rs  npm.rs  tag.rs  url.rs  workspace.rs
