[package]
name = "fnpm_semver"
version = "0.1.0"
description = "semver version for fnpm"
authors = ["wuliya <3369906077@qq.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/fnpm-js/semver"
repository = "https://github.com/fnpm-js/semver"
edition = "2024"
rust-version = "1.88.0"

[dependencies]
thiserror = { version = "2.0.18" }
ecow = { version = "0.2.6", features = ["serde"] }
smol_str = { version = "0.3.6", features = ["serde"] }
serde = { version = "1.0.228", features = ["derive"] }
url = { version = "2.5.8", features = ["serde"] }

[dev-dependencies]
serde_json = "1"
criterion = "0.8.2"

[[bench]]
name = "parse"
harness = false
